<resources>
    <string name="app_name">PM</string>
    <string name="title_home">Calendar</string>
    <string name="title_dashboard">Chat</string>
    <string name="title_notifications">Progress</string>
    <string name="title_setting">Setting</string>
    <string-array name="planets_array">
        <item>Create a group</item>
        <item>Join a group</item>
        <item>Leave a group</item>
        <item>Retrieve group lists</item>

    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- begin for calendar-->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="attendees">Attendees</string>
    <string name="event_discription">Event Discription</string>
    <string name="event_name1">Event Name</string>
    <string name="update">Update</string>
    <string name="event_location1">Event Location</string>
    <string name="event_discription1">Event Discription</string>
    <string name="attendee">Attendee</string>
    <string name="group_name">Group Name</string>
    <string name="project_name">Project Name</string>

    <string name="group_discription">Group Discription</string>
    <string name="add1">Add</string>
    <!-- end for calendar-->
    <string-array name="languages">
        <item>group 1</item>
        <item>group 2</item>
        <item>group 3</item>
        <item>group 4</item>
        <item>group 5</item>
    </string-array>
    <!--begin for chat-->
    <string name="hello">您好~微信聊天</string>
    <!--end for chat-->


    <!--begin for login-->
    <string name="btn_restore">Restore Password</string>
    <string name="btn_register">Register</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_pass">Password</string>
    <string name="checkbox_remember">Remember me</string>
    <string name="btn_login">Sign In</string>
    <string name="tv_restore">Forgot password?</string>
    <string name="btn_facebook">Facebook Login</string>
    <string name="btn_google">Google Login</string>
    <string name="tv_register">No account yet? Create one</string>
    <string name="hint_et_name">Name</string>
    <string name="label_register_activity">Registration</string>
    <string name="label_restore_activity">Restore Password</string>

    <string name="fb_login_success">Login with Facebook successful!</string>
    <string name="login_fail">Login failed</string>
    <string name="google_login_success">Login with Google successful!</string>
    <string name="email_login_success">Login successful!</string>
    <string name="register_success">Registration done!</string>
    <string name="register_fail">Registration failed</string>
    <string name="error_email">Enter a valid email</string>
    <string name="error_pass">Enter a password</string>
    <string name="restore_email_sent">Please check your email for an account restoration link.</string>
    <string name="restore_email_fail">Restore email was not sent</string>


    <!--end for login-->
</resources>
